<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailField"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:text=""
            android:textColor="@color/teal_200"
            android:textColorHint="@color/teal_700"
            android:textSize="20sp"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/pink"
            app:met_errorColor="@color/yellow"
            app:met_singleLineEllipsis="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passField"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text=""
            android:textColor="@color/teal_200"
            android:textColorHint="@color/teal_700"
            android:textSize="20sp"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="#982360"
            app:met_errorColor="#ddaa00"
            app:met_singleLineEllipsis="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameField"
            android:hint="@string/name"
            android:inputType="text"
            android:text=""
            android:textColor="@color/teal_200"
            android:textColorHint="@color/teal_700"
            android:textSize="20sp"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="#982360"
            app:met_errorColor="#ddaa00"
            app:met_singleLineEllipsis="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phoneField"
            android:hint="@string/phone"
            android:inputType="phone"
            android:text=""
            android:textColor="@color/teal_200"
            android:textColorHint="@color/teal_700"
            android:textSize="20sp"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="#982360"
            app:met_errorColor="#ddaa00"
            app:met_singleLineEllipsis="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_below="@+id/text_button"
            android:layout_margin="15dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="6dp"
                android:textColor="@color/white"
                android:background="@drawable/button_animation"
                android:text="@string/cancel"
                android:layout_marginEnd="6dp" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="6dp"
                android:textColor="@color/white"
                android:background="@drawable/button_animation"
                android:text="@string/register"
                android:layout_marginStart="6dp" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>