<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_element"
    android:background="@drawable/background1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_button"
        android:textSize="22sp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="2dp"
        android:typeface="serif"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/log_into_your_account"
        android:gravity="center_horizontal"
        android:shadowColor="@color/action_bar_color"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="5"
        android:textAllCaps="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_below="@+id/text_button"
        android:layout_margin="15dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAuthentication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="6dp"
            android:typeface="serif"
            android:textColor="@color/white"
            android:background="@drawable/button_animation"
            android:text="@string/sign_in"
            android:layout_marginEnd="6dp" />

        <Button
            android:id="@+id/btnRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="6dp"
            android:typeface="serif"
            android:textColor="@color/white"
            android:background="@drawable/button_animation"
            android:text="@string/register"
            android:layout_marginStart="6dp" />
    </LinearLayout>

</RelativeLayout>